依赖升级